--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </style>
 </head>
 <body>
-
+<div style="text-align: center; margin-bottom: 20px;">
+    <img src="pfp.png" alt="ARC Equity Logo" style="max-width: 150px; height: auto;">
+</div>
 <div class="container">
     <h1>Privacy Policy</h1>
     <p><strong>Effective Date:</strong> January 21, 2026</p>
