--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     </style>
 </head>
 <body>
-<div style="text-align: center; margin-bottom: 20px;">
-    <img src="pfp.png" alt="ARC Equity Logo" style="max-width: 150px; height: auto;">
-</div>
+
 <div class="container">
-    <h1>Privacy Policy</h1>
+    <h1>
+	<div style="display:flex; justify-content: space-between; width: 100%;">
+		<span>Privacy Policy</span>
+        	<span style="text-align: center; margin-bottom: 20px;">
+	            <img src="pfp.png" alt="ARC Equity Logo" style="max-width: 125px; height: auto;">
+        	</span>
+	</div>
+    </h1>
     <p><strong>Effective Date:</strong> January 21, 2026</p>
     
     <p>At <strong>ARC Equity</strong>, we are committed to protecting your privacy. This policy outlines how we handle the information you provide through our Facebook Lead Forms.</p>
